--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^5.5.4",
     "kerberos": "0.0.18",
     "mongoose": "^4.4.2",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.6.1"
   }
 }
